# maimai-scraping

./: .gitignore  Cargo.toml  README.md  generaate-config.toml
.vim/: coc-settings.json
aime-net/: Cargo.toml
aime-net/src/: api.rs  lib.rs  main.rs  parser.rs  schema.rs
derive_by_key/: Cargo.toml
derive_by_key/src/: lib.rs
edit-rating-analyzer-js/: Cargo.toml
edit-rating-analyzer-js/src/: main.rs
generate-config/: Cargo.toml
generate-config/src/: main.rs
maimai-scraping/: Cargo.toml
maimai-scraping-utils/: Cargo.toml
maimai-scraping-utils/src/: fs_json_util.rs  lib.rs  macros.rs  sega_id.rs
maimai-scraping/src/: api.rs  chrono_util.rs  compare_htmls.rs  cookie_store.rs  data_collector.rs  lib.rs  main.rs  sega_trait.rs
maimai-scraping/src/algorithm/: mod.rs  possibilties_from_sum_and_ordering.rs
maimai-scraping/src/maimai/: associated_user_data.rs  data_collector.rs  estimate_rating.rs  estimator_config_multiuser.rs  favorite_songs.rs  internal_lv_estimator.rs  load_score_level.rs  mod.rs  official_song_list.rs  play_record_parser.rs  rating.rs  song_list.rs  song_score_parser.rs  version.rs
maimai-scraping/src/maimai/internal_lv_estimator/: mod.rs  multi_user.rs  song_score.rs
maimai-scraping/src/maimai/parser/: aime_selection.rs  favorite_songs.rs  friend_code.rs  kop_ranking.rs  mod.rs  music_detail.rs  play_record.rs  rating_target.rs  score_record_list.rs  song_score.rs
maimai-scraping/src/maimai/schema/: latest.rs  mod.rs  ver_20210316_2338.rs  ver_20230914_1328.rs
maimai-scraping/src/maimai/song_list/: database.rs  in_lv.rs  mod.rs  official.rs  song_score.rs
maimai-scraping/src/ongeki/: aime_selection_parser.rs  friend_code_parser.rs  mod.rs  play_record_parser.rs  play_record_reconstructor.rs
maimai-scraping/src/ongeki/schema/: latest.rs
maimai-watcher/: Cargo.toml
maimai-watcher/src/: describe_record.rs  lib.rs  main.rs  misc.rs  slack.rs  slack_main.rs  watch.rs
rating-target-viewer/: Cargo.toml
rating-target-viewer/src/: entry_template.html  main.rs
score-level-matrix/: Cargo.toml
score-level-matrix/src/: main.rs
screenshot-generator/: Cargo.toml
screenshot-generator/src/: lib.rs  main.rs
set-option/: Cargo.toml
set-option/src/: main.rs
src/: api.rs  compare_htmls.rs  cookie_store.rs  fs_json_util.rs  lib.rs  main.rs  play_record_parser.rs  rating.rs  schema.rs  sega_trait.rs
src/algorithm/: possibilties_from_sum_and_ordering.rs
src/maimai/: load_score_level.rs  mod.rs  play_record_parser.rs  rating.rs  rating_target_parser.rs  song_score_parser.rs
src/maimai/schema/: latest.rs  ver_20210316_2338.rs
src/ongeki/: mod.rs  play_record_parser.rs  play_record_reconstructor.rs
src/ongeki/schema/: latest.rs
src/schema/: latest.rs  mod.rs  ver_20210316_2338.rs
