[package]
name = "maimai-scraping"
version = "0.1.0"
authors = ["TonalidadeHidrica <47710717+TonalidadeHidrica@users.noreply.github.com>"]
edition = "2018"
default-run = "maimai-scraping"

[dependencies]
reqwest = { version = "0.10.9", features = ["cookies"] }
tokio = { version = "0.2.13", features = ["macros"] }
anyhow = "1.0.37"
scraper = "0.12.0"
once_cell = "1.5.2"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
clap = "2.33.3"
chrono = "0.4.19"
url = "2.2.0"
derive_more = "0.99.11"
typed-builder = "0.8.0"
regex = "1.4.3"

[[bin]]
name = "test-with-file"
