[package]
name = "maimai-scraping"
version = "0.1.0"
authors = ["TonalidadeHidrica <47710717+TonalidadeHidrica@users.noreply.github.com>"]
edition = "2021"
default-run = "maimai-scraping"

[dependencies]
reqwest = { version = "0.11.7", features = ["cookies"] }
tokio = { version = "1.14.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.37"
scraper = "0.12.0"
once_cell = "1.5.2"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
clap = { version = "3.0.0-rc.7", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
url = { version = "2.2.1", features = ["serde"] }
derive_more = "0.99.11"
typed-builder = "0.9.1"
regex = "1.4.3"
thiserror = "1.0.24"
pretty_env_logger = "0.4.0"
derive-getters = "0.2.0"
itertools = "0.10.0"
fs-err = "2.6.0"
deranged = { version = "0.2.0", features = ["serde"] }
getset = "0.1.2"
arrayvec = "0.7.2"
