[package]
name = "aime-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
derive_more = "0.99.17"
env_logger = "0.11.3"
fs-err = "2.11.0"
getset = "0.1.2"
itertools = "0.12.1"
log = "0.4.21"
maimai-scraping-utils = { version = "0.1.0", path = "../maimai-scraping-utils" }
once_cell = "1.19.0"
reqwest = { version = "0.12.4", features = ["cookies"] }
reqwest_cookie_store = "0.7.0"
scraper = "0.19.0"
serde = "1.0.200"
tokio = { version = "1.14.0", features = ["rt", "rt-multi-thread", "macros"] }
