[package]
name = "edit-rating-anlyzer-js"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive"] }
fs-err = "2.9.0"
itertools = "0.13.0"
maimai-scraping = { version = "0.1.0", path = "../maimai-scraping" }
maimai-scraping-utils = { version = "0.1.0", path = "../maimai-scraping-utils" }
rslint_parser = "0.3.1"
