[package]
name = "maimai-scraping-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
derive_more = { version = "1.0.0", features = ["as_ref", "display", "from"] }
fs-err = "2.11.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
toml = "0.8.19"
typed-builder = "0.20.0"
