[package]
name = "maimai-scraping"
version = "0.1.0"
authors = ["TonalidadeHidrica <47710717+TonalidadeHidrica@users.noreply.github.com>"]
edition = "2021"
default-run = "maimai-scraping"

[dependencies]
anyhow = "1.0.37"
arrayvec = "0.7.2"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "4.4.5", features = ["derive", "wrap_help"] }
csv = "1.2.2"
deranged = { version = "0.3.8", features = ["serde"] }
derive_more = "0.99.11"
ego-tree = "0.6.2"
either = "1.8.1"
env_logger = "0.10.0"
fs-err = "2.6.0"
getset = "0.1.2"
hashbrown = "0.14.0"
html-minifier = "4.0.0"
indexmap = "2.0.0"
inquire = "0.6.2"
itertools = "0.11.0"
joinery = "3.1.0"
lazy_format = "2.0.0"
log = "0.4.19"
num-format = "0.4.0"
once_cell = "1.5.2"
pretty_env_logger = "0.4.0"
regex = "1.4.3"
reqwest = { version = "0.11.7", features = ["cookies"] }
scraper = "0.13.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_html_form = "0.2.2"
serde_json = "1.0.61"
strum = { version = "0.25.0", features = ["derive"] }
svg = "0.13.1"
tap = "1.0.1"
thiserror = "1.0.24"
tokio = { version = "1.14.0", features = ["rt", "rt-multi-thread", "macros"] }
typed-builder = "0.10.0"
typed-html = { git = "https://github.com/bodil/typed-html.git", branch = "master" }
url = { version = "2.2.1", features = ["serde"] }
