[package]
name = "maimai-scraping"
version = "0.1.0"
authors = ["TonalidadeHidrica <47710717+TonalidadeHidrica@users.noreply.github.com>"]
edition = "2021"
default-run = "maimai-scraping"

[dependencies]
anyhow = "1.0.37"
arrayvec = "0.7.2"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "4.4.5", features = ["derive", "wrap_help"] }
csv = "1.2.2"
deranged = { version = "0.3.8", features = ["serde"] }
derive_by_key = { version = "0.1.0", path = "../derive_by_key" }
derive_more = "0.99.11"
ego-tree = "0.6.2"
either = "1.8.1"
enum-iterator = "2.0.0"
enum-map = { version = "2.7.3", features = ["serde"] }
env_logger = "0.11.3"
fs-err = "2.6.0"
getset = "0.1.2"
hashbrown = { version = "0.14.0", features = ["serde"] }
indexmap = "2.0.0"
inquire = "0.7.5"
itertools = "0.12.1"
joinery = "3.1.0"
lazy_format = "2.0.0"
log = "0.4.19"
maimai-scraping-utils = { version = "0.1.0", path = "../maimai-scraping-utils" }
maplit = "1.0.2"
num-format = "0.4.0"
once_cell = "1.5.2"
ordered-float = "4.2.0"
pretty_env_logger = "0.5.0"
regex = "1.4.3"
reqwest = { version = "0.12.4", features = ["cookies"] }
rm = "0.3.2"
scraper = "0.19.0"
sealed = "0.5.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_html_form = "0.2.2"
serde_json = "1.0.61"
serde_with = "3.7.0"
smallvec = "1.13.2"
strum = { version = "0.26.2", features = ["derive"] }
svg = "0.17.0"
thiserror = "1.0.24"
tinyvec = { version = "1.8.0", features = ["alloc"] }
tokio = { version = "1.14.0", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.8.12"
typed-builder = "0.18.2"
typed-html = { git = "https://github.com/bodil/typed-html.git", branch = "master" }
url = { version = "2.2.1", features = ["serde"] }
urlencoding = "2.1.3"

[dev-dependencies]
rand = "0.8.5"
