[package]
name = "maimai-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.16", features = ["derive"] }
ctrlc = "3.4.0"
itertools = "0.11.0"
maimai-scraping = { version = "0.1.0", path = "../maimai-scraping" }
serde = "1.0.171"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "sync"] }
