[package]
name = "maimai-rating-target-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.72"
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.11.3"
itertools = "0.13.0"
lazy_format = "2.0.0"
maimai-scraping = { version = "0.1.0", path = "../maimai-scraping" }
maimai-scraping-utils = { version = "0.1.0", path = "../maimai-scraping-utils" }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
