[package]
name = "screenshot-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
fs-err = "2.11.0"
headless_chrome = { version = "1.0.9", features = ["fetch"] }
log = "0.4.21"
maimai-scraping = { path = "../maimai-scraping" }
scraper = "0.17.1"
