[package]
name = "screenshot-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
aime-net = { version = "0.1.0", path = "../aime-net" }
anyhow = "1.0.82"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
fs-err = "2.11.0"
headless_chrome = { version = "1.0.9", features = ["fetch"] }
itertools = "0.12.1"
log = "0.4.21"
maimai-scraping = { path = "../maimai-scraping" }
maimai-scraping-utils = { version = "0.1.0", path = "../maimai-scraping-utils" }
scraper = "0.19.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.8.12"
