[package]
name = "set-option"
version = "0.1.0"
edition = "2021"

[dependencies]
aime-net = { version = "0.1.0", path = "../aime-net" }
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
fs-err = "3.1.0"
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
log = "0.4.26"
maimai-scraping = { version = "0.1.0", path = "../maimai-scraping" }
maimai-scraping-utils = { version = "0.1.0", path = "../maimai-scraping-utils" }
once_cell = "1.21.0"
reqwest = "0.12.13"
scraper = "0.23.1"
serde_html_form = "0.2.7"
tokio = { version = "1.44.0", features = ["macros", "rt", "rt-multi-thread"] }
url = "2.5.4"
